# hw06-LeifMartin

./: .buildinfo  Makefile  README.html  README.md  _config.yml  _toc.yml  book-requirements.txt  conf.py  environment.yml  envscript.sh  genindex.html  hw06-description.html  index.html  index.ipynb  pyproj.toml  search.html  searchindex.js  setup.cfg
.doctrees/: README.doctree  environment.pickle
.doctrees/.pytest_cache/: README.doctree
.doctrees/ligotools/.pytest_cache/: README.doctree
.github/workflows/: book.yml
.pytest_cache/: README.html
_build/html/: .buildinfo  README.html  genindex.html  hw06-description.html  index.html  search.html  searchindex.js
_build/html/.doctrees/: README.doctree  environment.pickle  hw06-description.doctree  index.doctree
_build/jupyter_execute/: index.ipynb  index.py
_sources/: index.ipynb
ligotools/: setup.cfg  setup.py  utils.py
ligotools/.pytest_cache/: README.html
ligotools/ligotools/tests/: tests_readligo.py
ligotools/tests/: test_readligo.py  tests_readligo.py
