[metadata]
name             = ligotools
version          = attr: ligotools.__version__
author           = Ligo Scientific Collaboration (LSC) and Leif-Martin Sæther Sunde
author_email     = lmsunde@berkeley.edu
description      = A library for the ligo research project.
long_description = file: README.md
long_description_content_type = text/markdown
license          = BSD 3-Clause License
classifiers      =
	Programming Language :: Python :: 2.7
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent

[options]
include_package_data = True
packages = find:
python_requires  = ==2.7.15
# install_requires =
# 	tqdm

[options.packages.find]
exclude =
    examples*
    docs*
    mytoy.tests*