[metadata]
name             = ligotools
version          = attr: ligotools.__version__
author           = Ligo Scientific Collaboration (LSC) and Leif-Martin Sæther Sunde
author_email     = lmsunde@berkeley.edu
description      = A library for the ligo research project.
long_description = file: README.md
long_description_content_type = text/markdown
license          = BSD 3-Clause License
classifiers      =
	Programming Language :: Python :: 2
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent

[options]
include_package_data = True
packages = find:
python_requires  = >= 2.7,
install_requires =
	tqdm

[options.packages.find]
exclude =
    tests*

#[metadata]
#name = {ligotools}
#version = file: {name}/_version.txt
#author = Ligo Scientific Collaboration (LSC) and Leif-Martin Sæther Sunde
#author_email = lmsunde@berkeley.edu
#url = https://github.com/UCB-stat-159-s22/hw06-LeifMartin
#description = {Restructure of last repo}
#long_description = file: README.md
#long_description_content_type = text/markdown
#license = MIT
#license_file = COPYING
#platform = any
#classifiers =
#    Development Status :: 3 - Alpha
#    Intended Audience :: Developers
#    License :: OSI Approved :: MIT License
#    Operating System :: OS Independent
#    Programming Language :: Python
#    Programming Language :: Python :: 2.7
#    Topic :: Software Development :: Libraries :: Python Modules
#
#[options]
#zip_safe = false
#include_package_data = true
#python_requires = >= 2.7, != 3.0.*, != 3.1.*, != 3.2.*
#packages = {name}
#test_suite = tests
#setup_requires =
#    setuptools
#    # setuptools >=30.3.0     # minimal version for `setup.cfg`
#    # setuptools >=38.3.0     # version with most `setup.cfg` bugfixes
#    # setuptools >=46.4.0     # let's you use attr: to extract version from a module
#install_requires =
#    {install_requires}
#tests_require =
#    {tests_require}